fixed cmake file to properly compile with all flags and corrected save diretory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,14 @@
-cmake_minimum_required(VERSION 3.12)
+cmake_minimum_required(VERSION 3.0)
 project(CandyLand)
+
 set(CMAKE_CXX_STANDARD 17)
-include_directories(include)
-file(GLOB SOURCES "src/*.cpp")
-add_executable(CandyLand ${SOURCES})
+
+# Define the source files
+file(GLOB MODULE_SOURCES "src/modules/*.cpp")
+set(MAIN_SOURCE "src/main.cpp")
+
+# Create an executable from the sources
+add_executable(CandyLandCMake ${MODULE_SOURCES} ${MAIN_SOURCE})
+
+# Set the output directory for the executable
+set(EXECUTABLE_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/build")
