--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ file(GLOB MODULE_SOURCES "src/modules/*.cpp")
 set(MAIN_SOURCE "src/main.cpp")
 
 # Create an executable from the sources
-add_executable(CandyLandCMake ${MODULE_SOURCES} ${MAIN_SOURCE})
+add_executable(CandyLand ${MODULE_SOURCES} ${MAIN_SOURCE})
 
 # Set the output directory for the executable
 set(EXECUTABLE_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/build")
